<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".REGISTRATION"
    android:background="@drawable/ic_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_survey"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/app_name"/>

            <EditText
                android:id="@+id/registration_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittext_background"
                android:drawableLeft="@drawable/ic_login"
                android:drawablePadding="5dp"
                android:drawableTint="@color/text_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:hint="@string/registration_username_hint"
                android:textColorHint="@color/text_hint"
                android:textColor="@color/text_color"
                android:padding="10dp"
                android:elevation="8dp"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:drawableTint="@color/text_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:hint="@string/registration_email_hint"
                android:textColorHint="@color/text_hint"
                android:textColor="@color/text_color"
                android:padding="10dp"
                android:elevation="8dp"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/registration_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock"
                android:drawableTint="@color/text_hint"
                android:drawablePadding="5dp"
                android:background="@drawable/edittext_background"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:hint="@string/registration_password_hint"
                android:textColorHint="@color/text_hint"
                android:textColor="@color/text_color"
                android:padding="10dp"
                android:elevation="8dp"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/registration_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock"
                android:drawableTint="@color/text_hint"
                android:drawablePadding="5dp"
                android:background="@drawable/edittext_background"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:hint="@string/registration_confirm_password_hint"
                android:textColorHint="@color/text_hint"
                android:textColor="@color/text_color"
                android:padding="10dp"
                android:elevation="8dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/registration_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_gradient"
                android:text="@string/registration_button_string"
                android:textAlignment="center"
                android:textColor="@color/app_white2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/registration_login_button_string"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/registration_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangular_border"
                android:text="@string/login_log_string"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>